@@ -1,3 +1,15 @@
+2012-06-12  Yong Li  <yoli@rim.com>
+
+        [BlackBerry] Use a safer way to shrink JS memory usage
+        https://bugs.webkit.org/show_bug.cgi?id=88811
+
+        Reviewed by Antonio Gomes.
+
+        We should just make a GC request and JSC will check if it is safe to do anything.
+
+        * Api/BlackBerryGlobal.cpp:
+        (BlackBerry::WebKit::clearMemoryCaches):
+
 2012-06-11  Jonathan Dong  <jonathan.dong@torchmobile.com.cn>
 
         [BlackBerry] Autofill feature implementation for BlackBerry porting
